fix issue where pasted content overflows

--- a/src/themes/base/modules/paste-manager.styl
+++ b/src/themes/base/modules/paste-manager.styl
@@ -1,4 +1,4 @@
 .ql-paste-manager
-  left: -10000px
+  left: -100000px
   position: absolute
   top: 50%
